--- a/mobile-app/bank-app/testFinal/app/src/main/AndroidManifest.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JoinActivity"></activity>
+        <activity android:name=".presentation.JoinActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
